# kilowatt-tycoon

./: .cursorrules  .env.example  .gitignore  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  Trunk.toml  index.html  ocpp_feed.js  protocol_feed.js
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  e2e-live.yml
assets/js/: kwwhat_analyze.js  kwwhat_models.js  protocol_feed.js
assets/logokit/: Logo.ai  Logo_mark 1.eps  Logo_mark 2.eps  Logo_mark 3.eps  Logo_mark 4.eps  Logo_mark 5.eps  Logo_mark 6.eps  Logo_mark 7.eps  Logo_mark 8.eps  Logo_mark 9.eps  README.md
assets/maps/: 01_first_street.tmx  02_quick_charge_express.tmx  03_central_fleet_plaza.tmx  04_scooter_alley.tmx
assets/tilesets/: kilowatt_tiles.tsx
spec/: ARCHITECTURE.md  ECOSYSTEM.md  EXPANSION_SITES_VEHICLES.md  FLEET.md  FLOW.md  GDD_COMPLETE.md  HACKERS.md  MOBILE.md  MVP_ASSET_SCOPE.md  PIXELS.md  RF.md  SPEC_DEMAND_CHARGES.md  SPEC_GRID_POWER.md  SPEC_OPERATIONS.md  SPEC_SANDBOX_MVP.md  SPEC_SYSTEMS.md  STYLE_GUIDE.md  TECH.md  WAITING.md
spec/levels/: 01_first_street.md  01_first_street.zones.json  02_quick_charge_express.md  02_quick_charge_express.zones.json  03_central_fleet_plaza.md  03_central_fleet_plaza.zones.json  04_scooter_alley.md  04_scooter_alley.zones.json  HOWTO.md  TILED_WORKFLOW.md  levels.md
src/: audio.rs  errors.rs  lib.rs  main.rs
src/api/: leaderboard.rs  mod.rs  supabase.rs
src/components/: charger.rs  driver.rs  emotion.rs  hacker.rs  mod.rs  power.rs  robber.rs  site.rs  technician.rs  ticket.rs  traffic.rs
src/data/: json_assets.rs  loader.rs  mod.rs  tiled_loader.rs
src/events/: demand.rs  mod.rs  site.rs
src/helpers/: camera_controller.rs  canopy_layout.rs  debug_overlay.rs  mod.rs  pointer.rs  ui_builders.rs
src/hooks/: charger_hooks.rs  mod.rs  power_hooks.rs
src/observers/: charger_observers.rs  mod.rs  ticket_observers.rs
src/ocpi/: feed.rs  message_gen.rs  mod.rs  queue.rs  types.rs
src/ocpp/: connection.rs  disk_writer.rs  feed.rs  message_gen.rs  mod.rs  ports_registry.rs  queue.rs  types.rs
src/openadr/: feed.rs  message_gen.rs  mod.rs  queue.rs  types.rs
src/resources/: achievements.rs  asset_handles.rs  build_state.rs  charger_queue.rs  demand.rs  fleet.rs  game_clock.rs  game_data.rs  game_state.rs  leaderboard.rs  ledger.rs  lot_templates.rs  mod.rs  multi_site.rs  northstar_grid.rs  player_profile.rs  repair_requests.rs  site_config.rs  site_energy.rs  site_grid.rs  site_upgrades.rs  sprite_metadata.rs  strategy.rs  technician.rs  tiled_bridge.rs  tutorial.rs  unit_system.rs
src/states/: character_setup.rs  game_over.rs  loading.rs  main_menu.rs  mod.rs  pause.rs  playing.rs
src/systems/: achievements.rs  actions.rs  ambient_traffic.rs  build_input.rs  charger.rs  demand_warnings.rs  driver.rs  emotion.rs  environment.rs  fleet.rs  gameplay_tips.rs  hacker.rs  interaction.rs  mod.rs  northstar_movement.rs  power.rs  power_dispatch.rs  robber.rs  scenario_events.rs  scene.rs  screenshot.rs  site_roots.rs  site_switching.rs  site_visibility.rs  sprite.rs  technician.rs  test_bridge.rs  ticket.rs  tiled_maps.rs  time.rs  utility_billing.rs  win_lose.rs
tests/: charger_sync.rs  charger_systems_test.rs  day_boundary_hardening_test.rs  demand_systems_test.rs  driver_systems_test.rs  economics_validation_test.rs  energy_simulation_test.rs  layout_validation.rs  leaderboard_api_test.rs  ledger_integration_test.rs  mobile_viewport_test.rs  multi_site_test.rs  power_systems_test.rs  test_utils.rs  wasm_integration.rs
tools/: asset_manifest.json  build_assets.py  convert_svgs_to_pngs.py  generate_assets_ai.py  generate_characters_ai.py  generate_code_from_manifest.py  generate_scene_tiles_ai.py  level4_flow_sim.py  reimagine_levels_ai.py  requirements-ai-generation.txt  site_to_tmx.py  slice_fixed_tiles.py  style_config.json  validate_manifest.py
(+54 files in other folders)
